@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.6.21) unstable; urgency=low
 
   * http-client: log more error messages
   * delegate-stock: added the DOCUMENT_ROOT environment variable
+  * response, widget: accept "application/xhtml+xml"
 
  --
 
